kubernetes/apps/public/homepage/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: public
  labels:
    app.kubernetes.io/name: homepage
    app.kubernetes.io/managed-by: kustomize
