kubernetes/apps/public/homepage/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homepage
  namespace: public
  annotations:
    external-dns.alpha.kubernetes.io/target: "5825ee88-3939-4e16-ab32-856c6ff7df96.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  - "home.smadja.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: homepage
      port: 80
